fix: added debugging
